--- a/src/App/components/InsuranceLetterModal/FileViewer/fileViewer.scss
+++ b/src/App/components/InsuranceLetterModal/FileViewer/fileViewer.scss
@@ -1,7 +1,16 @@
 .file-viewer {
 	width: 100%;
-	& > iframe {
+	&__container {
 		width: 100%;
 		height: 100%;
+	}
+
+	&__loader {
+		width: 100%;
+		height: 100%;
+		background-color: var(--medpult-bg-color);
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
