--- a/src/reset.scss
+++ b/src/reset.scss
@@ -92,14 +92,14 @@ textarea:not([rows]) {
 	scroll-margin-block: 5ex;
 }
 
-input[type='text'],
-input[type='search'],
-input[type='number'],
-input[type='tel'],
-input[type='date'],
-input[type='email'],
-input[type='password'],
-input:not([class]) {
+#insurance-letter-root input[type='text'],
+#insurance-letter-root input[type='search'],
+#insurance-letter-root input[type='number'],
+#insurance-letter-root input[type='tel'],
+#insurance-letter-root input[type='date'],
+#insurance-letter-root input[type='email'],
+#insurance-letter-root input[type='password'],
+#insurance-letter-root input:not([class]) {
 	border-radius: initial;
 	border: initial;
 	display: initial;
@@ -109,22 +109,22 @@ input:not([class]) {
 	background-clip: initial;
 }
 
-input[type='text']:focus,
-input[type='text']:focus-within,
-input[type='search']:focus,
-input[type='search']:focus-within,
-input[type='number']:focus,
-input[type='number']:focus-within,
-input[type='tel']:focus,
-input[type='tel']:focus-within,
-input[type='date']:focus,
-input[type='date']:focus-within,
-input[type='email']:focus,
-input[type='email']:focus-within,
-input[type='password']:focus,
-input[type='password']:focus-within,
-input:not([class]):focus,
-input:not([class]):focus-within {
+#insurance-letter-root input[type='text']:focus,
+#insurance-letter-root input[type='text']:focus-within,
+#insurance-letter-root input[type='search']:focus,
+#insurance-letter-root input[type='search']:focus-within,
+#insurance-letter-root input[type='number']:focus,
+#insurance-letter-root input[type='number']:focus-within,
+#insurance-letter-root input[type='tel']:focus,
+#insurance-letter-root input[type='tel']:focus-within,
+#insurance-letter-root input[type='date']:focus,
+#insurance-letter-root input[type='date']:focus-within,
+#insurance-letter-root input[type='email']:focus,
+#insurance-letter-root input[type='email']:focus-within,
+#insurance-letter-root input[type='password']:focus,
+#insurance-letter-root input[type='password']:focus-within,
+#insurance-letter-root input:not([class]):focus,
+#insurance-letter-root input:not([class]):focus-within {
 	box-shadow: none;
 	border-color: none;
 	transition: none;
