--- a/src/UIKit/CustomList/CustomListRow/customListRow.scss
+++ b/src/UIKit/CustomList/CustomListRow/customListRow.scss
@@ -1,24 +1,23 @@
-#insurance-letter-root .custom-list-row {
-	display: flex;
-	gap: 8px;
-	flex-direction: row;
+.custom-list-row {
+  display: flex;
+  gap: 8px;
+  flex-direction: row;
 
-	border-bottom: 2px solid var(--medpult-bg-color);
-	height: 52px;
-	align-items: center;
+  border-bottom: 2px solid var(--medpult-bg-color);
+  height: 52px;
+  align-items: center;
+  // padding: 0px 20px;
 
-	padding-right: 20px;
+  &_openable {
+    cursor: pointer;
 
-	&_openable {
-		cursor: pointer;
+    &:hover {
+      background-color: var(--medpult-hover-color);
+    }
+  }
 
-		&:hover {
-			background-color: var(--medpult-hover-color);
-		}
-	}
-
-	&_open {
-		cursor: pointer;
-		background-color: var(--medpult-bg-color);
-	}
+  &_open {
+    cursor: pointer;
+    background-color: var(--medpult-bg-color);
+  }
 }
