Иконки на кнопках и уменьшено модальное окно

--- a/src/App/components/InsuranceLetterModal/insuranceLetterModal.scss
+++ b/src/App/components/InsuranceLetterModal/insuranceLetterModal.scss
@@ -32,10 +32,10 @@
 		}
 	}
 
-	&__content {
+	&__contentH {
 		overflow-y: hidden;
 		resize: both;
-		min-height: 600px;
+		min-height: 200px;
 		min-width: 700px;
 		max-height: 100%;
 		max-width: 100%;
